Fix email link. Reformat

--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,139 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Tony Joseph Oreglia</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta charset="UTF-8">
-      <link rel="stylesheet" href="style.css">
-      <link rel="icon" href="icon.png" type="image/png" />
-      <script data-goatcounter="https://tonycodes.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
+    <title>Tony Joseph Oreglia</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="icon.png" type="image/png" />
+    <script
+      data-goatcounter="https://tonycodes.goatcounter.com/count"
+      async
+      src="//gc.zgo.at/count.js"
+    ></script>
   </head>
   <body>
     <main>
-        <header>
-          <h1>Tony Joseph Oreglia</h1>
-          <div class="header-section">
-            <img src="me.png" alt="a picture of me">
-            <p class=""><span>I am the 
-                <a href="#jumble">creator of Jumble Journal</a> and <a href="#air-books">Air Books</a>. <a href="#tech-companies">I've worked for some exceptional technology companies</a>. I enjoy <a href="#blog">exploring ideas and expressing myself in writing</a>. <a href="#sports">I like sports and being active</a>. I welcome emails to <a href="href="mailto:tony.oreglia@gmail.com">tony.oreglia@gmail.com</a>. You can also find me <a href="https://x.com/tony_oreglia" target="_blank">on X</a> and <a href="https://www.linkedin.com/in/tony-oreglia/" target="_blank">on LinkedIn</a>.</span></p>
-          </div>
-        </header>
-        <article>
-          <h2 id="jumble">Creator of Jumble Journal</h2>
-          <p>The world is better when people write more. Jumble is a space for daily flow of thought journaling. It implements the <a href="https://fire-framework.info/" target="_blank">FIRE framework</a> to support sustainable personal growth. <a href="https://jumblejournal.org" target="_blank">Jumble Journal</a> started as an experiment in <a href="https://docs.google.com/document/d/1T0SEj5WrymfyzNDD8rNGKQ2OpF6xoPGrYahppGd4Yaw/edit?usp=sharing" target="_blank">Zero Knowledge Architecture</a>. Soon it evolved into a full fledged B2C micro-saas product. This product evolved in Cupertino, California at <a href="https://draperuniversity.com/" target="_blank">Draper University</a> after being selected from a pitch competition. Jumble went on to be a <a href="https://www.producthunt.com/products/jumble-journal" target="_blank">top Product Hunt launch</a> and is today a profitable company where thousands of journal entries and insights are created daily.</p>
-          <h2 id="air-books">Creator of Air Books</h2>
-          <p>The world is better when people read more. <a href="https://air-books.app" target="_blank">Air Books</a> enables the sharing economy of books by making it literally effortless to upload your entire bookshelf as a digital bookstore. It does this by streaming images from your phone camera to an OCR pipeline to accurately identify the books on your shelf just from the view of the spines.</p>
-          <h2 id="tech-companies">I've worked for some exceptional technology companies</h2>
-          <p>My career began working with hard drive firmware in C++ at Seagate where I continued as a Field application engineer. I continued with my focus on software development in Sydney with <a href="https://safetyculture.com/" target="_blank">SafetyCulture</a>, an Australian unicorn. At SafetyCulture I developed the public API, working closely with enterprise customers to understand real world usage, and helped build the initial version of a task managements system on their flagship application, iAuditor. Next, I joined <a href="https://www.dashlane.com/" target="_blank">Dashlane</a> in Lisbon, Portugal. Dashlane is a web security engineering company at it's heart, and I learned a lot from some very smart people there. I even had the chance to do a year of R&D, resulting in <a href="https://patents.justia.com/patent/20240012933" target="_blank">a patented invention that is in use today</a> in Dashlane's zero knowledge SSO architecture. I also worked on monetization and subscriptions in my first experiences as a technical lead.</p>
-          <h2 id="blog">Exploring ideas in writing</h2>
-          <p>On <a href="/blog">my blog</a>, I post about technology, business, history, and some armchair philosophy. I also keep a <a href="/garden" >digital garden</a> with notes (some half baked) on all sorts of subjects. I also <a href="https://x.com/tony_oreglia" target="_blank">post on X</a> occasionally. Typically I start each day with twenty minutes of journaling my flow of thought. Journal helps me explore ideas, stay centered and start the day creating instead consuming.</p>
-          <h2 id="sports">I like sports and being active
-          </h2>
-          <p>I played rugby for ten years, including three years with Waverley Rugby Club in Bondi Beach, Australia. Now I do endurance sports and Ju Jitsu. I completed a <a href="https://lap2go.com/pt/embed/setubal-triathlon-2021/Athlete/420" target="_blank">half Iron Man in Setúbal in 5 hours 33 minutes</a> and a <a href="https://www.maratonadoporto.com/en/results-2024/1473703/" target="_blank">Marathon in Porto in 4 hours</a>. I've competed a few times in Ju Jitsu and am currently a blue belt.</p>
-        </article>
-      </main>
+      <header>
+        <h1>Tony Joseph Oreglia</h1>
+        <div class="header-section">
+          <img src="me.png" alt="a picture of me" />
+          <p class="">
+            <span
+              >I am the <a href="#jumble">creator of Jumble Journal</a> and
+              <a href="#air-books">Air Books</a>.
+              <a href="#tech-companies"
+                >I've worked for some exceptional technology companies</a
+              >. I enjoy
+              <a href="#blog"
+                >exploring ideas and expressing myself in writing</a
+              >. <a href="#sports">I like sports and being active</a>. I welcome
+              emails to
+              <a href="mailto:tony.oreglia@gmail.com">tony.oreglia@gmail.com</a
+              >. You can also find me
+              <a href="https://x.com/tony_oreglia" target="_blank">on X</a> and
+              <a
+                href="https://www.linkedin.com/in/tony-oreglia/"
+                target="_blank"
+                >on LinkedIn</a
+              >.</span
+            >
+          </p>
+        </div>
+      </header>
+      <article>
+        <h2 id="jumble">Creator of Jumble Journal</h2>
+        <p>
+          The world is better when people write more. Jumble is a space for
+          daily flow of thought journaling. It implements the
+          <a href="https://fire-framework.info/" target="_blank"
+            >FIRE framework</a
+          >
+          to support sustainable personal growth.
+          <a href="https://jumblejournal.org" target="_blank">Jumble Journal</a>
+          started as an experiment in
+          <a
+            href="https://docs.google.com/document/d/1T0SEj5WrymfyzNDD8rNGKQ2OpF6xoPGrYahppGd4Yaw/edit?usp=sharing"
+            target="_blank"
+            >Zero Knowledge Architecture</a
+          >. Soon it evolved into a full fledged B2C micro-saas product. This
+          product evolved in Cupertino, California at
+          <a href="https://draperuniversity.com/" target="_blank"
+            >Draper University</a
+          >
+          after being selected from a pitch competition. Jumble went on to be a
+          <a
+            href="https://www.producthunt.com/products/jumble-journal"
+            target="_blank"
+            >top Product Hunt launch</a
+          >
+          and is today a profitable company where thousands of journal entries
+          and insights are created daily.
+        </p>
+        <h2 id="air-books">Creator of Air Books</h2>
+        <p>
+          The world is better when people read more.
+          <a href="https://air-books.app" target="_blank">Air Books</a> enables
+          the sharing economy of books by making it literally effortless to
+          upload your entire bookshelf as a digital bookstore. It does this by
+          streaming images from your phone camera to an OCR pipeline to
+          accurately identify the books on your shelf just from the view of the
+          spines.
+        </p>
+        <h2 id="tech-companies">
+          I've worked for some exceptional technology companies
+        </h2>
+        <p>
+          My career began working with hard drive firmware in C++ at Seagate
+          where I continued as a Field application engineer. I continued with my
+          focus on software development in Sydney with
+          <a href="https://safetyculture.com/" target="_blank">SafetyCulture</a
+          >, an Australian unicorn. At SafetyCulture I developed the public API,
+          working closely with enterprise customers to understand real world
+          usage, and helped build the initial version of a task managements
+          system on their flagship application, iAuditor. Next, I joined
+          <a href="https://www.dashlane.com/" target="_blank">Dashlane</a> in
+          Lisbon, Portugal. Dashlane is a web security engineering company at
+          it's heart, and I learned a lot from some very smart people there. I
+          even had the chance to do a year of R&D, resulting in
+          <a
+            href="https://patents.justia.com/patent/20240012933"
+            target="_blank"
+            >a patented invention that is in use today</a
+          >
+          in Dashlane's zero knowledge SSO architecture. I also worked on
+          monetization and subscriptions in my first experiences as a technical
+          lead.
+        </p>
+        <h2 id="blog">Exploring ideas in writing</h2>
+        <p>
+          On <a href="/blog">my blog</a>, I post about technology, business,
+          history, and some armchair philosophy. I also keep a
+          <a href="/garden">digital garden</a> with notes (some half baked) on
+          all sorts of subjects. I also
+          <a href="https://x.com/tony_oreglia" target="_blank">post on X</a>
+          occasionally. Typically I start each day with twenty minutes of
+          journaling my flow of thought. Journal helps me explore ideas, stay
+          centered and start the day creating instead consuming.
+        </p>
+        <h2 id="sports">I like sports and being active</h2>
+        <p>
+          I played rugby for ten years, including three years with Waverley
+          Rugby Club in Bondi Beach, Australia. Now I do endurance sports and Ju
+          Jitsu. I completed a
+          <a
+            href="https://lap2go.com/pt/embed/setubal-triathlon-2021/Athlete/420"
+            target="_blank"
+            >half Iron Man in Setúbal in 5 hours 33 minutes</a
+          >
+          and a
+          <a
+            href="https://www.maratonadoporto.com/en/results-2024/1473703/"
+            target="_blank"
+            >Marathon in Porto in 4 hours</a
+          >. I've competed a few times in Ju Jitsu and am currently a blue belt.
+        </p>
+      </article>
+    </main>
   </body>
 </html>
