Add section on website hosting infra

--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,11 @@
               >. I enjoy
               <a href="#blog"
                 >exploring ideas and expressing myself in writing</a
-              >. <a href="#sports">I like sports and being active</a>. I welcome
-              emails to
+              >. <a href="#sports">I like sports and being active</a>.
+              <a href="#infrastructure"
+                >This website is proudly hosted on my home server.</a
+              >
+              I welcome emails to
               <a href="mailto:tony.oreglia@gmail.com">tony.oreglia@gmail.com</a
               >. You can also find me
               <a href="https://x.com/tony_oreglia" target="_blank">on X</a> and
@@ -132,6 +135,29 @@
             target="_blank"
             >Marathon in Porto in 4 hours</a
           >. I've competed a few times in Ju Jitsu and am currently a blue belt.
+        </p>
+        <h2 id="infrastructure">This website runs on my home server</h2>
+        <p>
+          This website is proudly hosted on a
+          <a
+            href="https://thinkstation-specs.com/thinkstation/p520/"
+            target="_blank"
+            >Lenovo ThinkStation P520 workstation</a
+          >
+          running from my home. The P520 was originally designed for
+          professional workstations but repurposed as a reliable home server.
+          The
+          <a href="https://github.com/tonyOreglia/tonycodes.com" target="_blank"
+            >site itself</a
+          >
+          uses the simplest technology stack suited to the purpose — vanilla
+          HTML, CSS and JavaScript deployed via a simple bash script using
+          rsync. This lightweight approach ensures fast loading times, easy
+          maintenance and
+          <a href="https://github.com/zakirullin/cognitive-load" target="_blank"
+            >low cognitive load</a
+          >. I love the feeling of hosting my personal websites, available to
+          the entire world, from my living room.
         </p>
       </article>
     </main>
