Update home page
- add images
- update contact email
- update patent link

--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,8 @@
                 >This website is proudly hosted on my home server.</a
               >
               I welcome emails to
-              <a href="mailto:tony.oreglia@gmail.com">tony.oreglia@gmail.com</a
-              >. You can also find me
+              <a href="mailto:me@tonycodes.com">me@tonycodes.com</a>. You can
+              also find me
               <a href="https://x.com/tony_oreglia" target="_blank">on X</a> and
               <a
                 href="https://www.linkedin.com/in/tony-oreglia/"
@@ -100,7 +100,7 @@
           it's heart, and I learned a lot from some very smart people there. I
           even had the chance to do a year of R&D, resulting in
           <a
-            href="https://patents.justia.com/patent/20240012933"
+            href="https://patents.google.com/?inventor=Tony+Oreglia&country=US&language=ENGLISH&type=PATENT"
             target="_blank"
             >a patented invention that is in use today</a
           >
@@ -159,6 +159,23 @@
           >. I love the feeling of hosting my personal websites, available to
           the entire world, from my living room.
         </p>
+        <h2>Personal Life</h2>
+        <p>I'm married to Thalita and we live in Cascais, Portugal.</p>
+        <h2 id="pictures">Pictures</h2>
+        <div class="image-wrap">
+          <img
+            src="images/wedding.jpg"
+            alt="Wedding photo"
+            class="picture-img"
+          />
+        </div>
+        <div class="image-wrap">
+          <img
+            src="images/tmb.jpg"
+            alt="Tour du Mont Blanc"
+            class="picture-img"
+          />
+        </div>
       </article>
     </main>
   </body>
