remove X link from profile

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,6 @@
               I welcome emails to
               <a href="mailto:me@tonycodes.com">me@tonycodes.com</a>. You can
               also find me
-              <a href="https://x.com/tony_oreglia" target="_blank">on X</a> and
               <a
                 href="https://www.linkedin.com/in/tony-oreglia/"
                 target="_blank"
@@ -113,10 +112,8 @@
           On <a href="/blog">my blog</a>, I post about technology, business,
           history, and some armchair philosophy. I also keep a
           <a href="/garden">digital garden</a> with notes (some half baked) on
-          all sorts of subjects. I also
-          <a href="https://x.com/tony_oreglia" target="_blank">post on X</a>
-          occasionally. Typically I start each day with twenty minutes of
-          journaling my flow of thought. Journal helps me explore ideas, stay
+          all sorts of subjects. Typically I start each day with twenty minutes
+          of journaling my flow of thought. Journal helps me explore ideas, stay
           centered and start the day creating instead consuming.
         </p>
         <h2 id="sports">I like sports and being active</h2>
