add rel me email address for login to indialogin

--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,8 @@
                 >This website is proudly hosted on my home server.</a
               >
               I welcome emails to
-              <a href="mailto:me@tonycodes.com">me@tonycodes.com</a>. You can
-              also find me
+              <a href="mailto:me@tonycodes.com" rel="me">me@tonycodes.com</a>.
+              You can also find me
               <a
                 href="https://www.linkedin.com/in/tony-oreglia/"
                 target="_blank"
