add air books shelf

--- a/public/index.html
+++ b/public/index.html
@@ -44,16 +44,18 @@
         </div>
       </header>
       <article>
-        <h2 id="jumble">Creator of Jumble Journal</h2>
+        <h2 id="jumble">
+          Creator of
+          <a href="https://jumblejournal.org" target="_blank">Jumble Journal</a>
+        </h2>
         <p>
           The world is better when people write more. Jumble is a space for
           daily flow of thought journaling. It implements the
           <a href="https://fire-framework.info/" target="_blank"
             >FIRE framework</a
           >
-          to support sustainable personal growth.
-          <a href="https://jumblejournal.org" target="_blank">Jumble Journal</a>
-          started as an experiment in
+          to support sustainable personal growth. Jumble Journal started as an
+          experiment in
           <a
             href="https://docs.google.com/document/d/1T0SEj5WrymfyzNDD8rNGKQ2OpF6xoPGrYahppGd4Yaw/edit?usp=sharing"
             target="_blank"
@@ -72,16 +74,29 @@
           and is today a profitable company where thousands of journal entries
           and insights are created daily.
         </p>
-        <h2 id="air-books">Creator of Air Books</h2>
+        <h2 id="air-books">
+          Creator of
+          <a href="https://air-books.app" target="_blank">Air Books</a>
+        </h2>
         <p>
-          The world is better when people read more.
-          <a href="https://air-books.app" target="_blank">Air Books</a> enables
-          the sharing economy of books by making it literally effortless to
-          upload your entire bookshelf as a digital bookstore. It does this by
-          streaming images from your phone camera to an OCR pipeline to
-          accurately identify the books on your shelf just from the view of the
-          spines.
+          I love reading and collecting books.Air Books enables the sharing
+          economy of physical books by making it effortless to upload your
+          entire bookshelf as a digital bookstore. It does this by streaming
+          images from your phone camera to an OCR pipeline to accurately
+          identify the books on your shelf just from the view of the spines.
         </p>
+        <h3>Here is my Air Books Digital Shelf</h3>
+        <iframe
+          src="https://air-books.app/public/shelf?shelfId=9&embedded=true"
+          title="null"
+          style="
+            width: 100%;
+            height: 50vh;
+            border-radius: 12px;
+            border: 2px solid #7eae71;
+          "
+          loading="lazy"
+        ></iframe>
         <h2 id="tech-companies">
           I've worked for some exceptional technology companies
         </h2>
@@ -157,7 +172,16 @@
           the entire world, from my living room.
         </p>
         <h2>Personal Life</h2>
-        <p>I'm married to Thalita and we live in Cascais, Portugal.</p>
+        <p>
+          I'm married to
+          <a
+            href="https://www.thalitamilan.com/?ref=tonycodes.com"
+            target="_blank"
+            rel="noopener"
+            >Thalita</a
+          >
+          and we live in Cascais, Portugal.
+        </p>
         <h2 id="pictures">Pictures</h2>
         <div class="image-wrap">
           <img
